# cli-research-agent

./: .gitignore  README.md  main.py  main_langgraph.py  pyproject.toml
docs/: cli_re_agent_casestudy.md  project_deepdive.md
src/research_agent/: config.py  graph.py  tools.py
tests/: benchmark.py
